hphp/test/slow/unserialize-invalid-dynamic-prop-name/slow-protected-empty.php.expectf
Fatal error: Cannot access empty property in %s/slow-protected-empty.php on line 7
